Added random payloads and new api